# irp-capture

./: .gitignore  CHANGELOG.md  CURSOR-GUIDE.md  DISCORD-SENSOR-SETUP.md  README.md  SKILL.md  TRUST.md  WEBSITE_SETUP.md  pyproject.toml
.github/DISCUSSION_TEMPLATE/: show-your-install.yml
.github/actions/irp-check/: action.yml
.github/workflows/: irp-pr-check.yml
book/: 01-analysis-commands.md  01-analysis-core.md  01-analysis-plugin.md  02-positioning.md  03-structure.md  05-review-feedback.md  07-audit-report.md  README.md  appendix-practical-considerations.md  ch1-architecture.md  ch10-who-it-applies-to.md  ch11-the-risk-ladder.md  ch11b-generating-the-evidence.md  ch12-article-12-logging.md  ch13-article-13-ifu.md  ch14-article-14-oversight.md  ch15-article-27-fria.md  ch16-article-72-monitoring.md  ch17-the-path-forward.md  ch2-state-conflicts.md  ch3-capture.md  ch4-validation.md  ch5-figma-plugin.md  ch6-extensibility.md  ch7-epilogue.md  ch9-why-this-law-exists.md
docs/: codebase-to-book-estimate.md  github-mcp-setup.md  level-up-setup.md
irp/api/: README.md  server.py
irp/core/: dynamics.py  irp.py  resolver.py  store.py
irp/discord_sensor/: .env.example  README.md  __init__.py  commands.py  config.py  ledger_writer.py  main.py  modals.py  requirements.txt  utils.py
irp/figma_plugin/: README.md  code.js  manifest.json  ui.html
irp/integrations/: __init__.py  dispatch.py  mempalace.py  obsidian.py
irp/integrity/: DESIGN.md  __init__.py  attest.py  canonical.py  errors.py  manifest.py  rfc3161.py  snapshot.py  strict.py  verify.py
irp/mcp/: __init__.py  server.py
irp/vscode_extension/: LICENSE  package-lock.json  package.json  tsconfig.json
tests/: conftest.py  test_attest.py  test_craft_audit.py  test_dynamics.py  test_evidence_attest.py  test_gate.py  test_integrity.py  test_mod.py  test_resolver.py  test_watch.py
tools/: .env.example  collab.py
web/: .gitignore  README.md  astro.config.mjs  package.json  tailwind.config.js  vercel.json
web/public/: demo-graph.html  robots.txt
web/src/: book.config.ts  content.config.ts
(+39 files in other folders)
